Filename: shorten, HK: modified

--- a/JUICE-CDF-HF-SID2.ipynb
+++ b/JUICE-CDF-HF-SID2.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL for ASW1/2/3 -- 2025/10/5"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL for ASW1/2/3 -- 2025/10/14"
    ]
   },
   {
@@ -58,7 +58,7 @@
     "sys.path.append('./lib/')\n",
     "import juice_cal_lib   as juice_cal\n",
     "import juice_cdf_lib   as juice_cdf\n",
-    "import juice_sid2_data as juice_data\n",
+    "# import juice_sid2_data as juice_data\n",
     "import juice_sid2_lib  as juice_sid2\n",
     "import juice_spec_lib  as juice_spec"
    ]
@@ -136,7 +136,7 @@
     "# date='20240822';  ver = 'V02'   # CAL\n",
     "# date='20250331';  ver = 'V01'   # CAL\n",
     "date='0';         ver = 'V02'   # Test data\n",
-    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
+    "data_dir, data_name_list = juice_sid2.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -189,6 +189,26 @@
     "print(\"         Time-length:\", data.time[0][0][-1], \"sec in 1-sweep, with time resolution of \", data.time[0][0][1], \"sec\")\n",
     "print(\"f, width, step (kHz):\", f_min0,  \"-\", f_max0, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
     "print(\"                  Ch:\", data.ch_selected[data.n_time//2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45db2d2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_sweep1 = 4;  n_sweep2 = 6;  n_sweep3 = 9\n",
+    "print(f\"[First peak - {n_sweep1}]\")\n",
+    "peak_E = np.ravel(data.Eu_i[n_sweep1]); peak_f = np.nanargmax(peak_E); print(\"Eu:\", '{:.2e} '.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.Eu_i[n_sweep1]); peak_f = np.nanargmin(peak_E); print(\"Eu:\", '{:.2e} '.format(peak_E[peak_f]))\n",
+    "print(f\"[Mid   peak - {n_sweep2}]\")\n",
+    "peak_E = np.ravel(data.Eu_i[n_sweep2]); peak_f = np.nanargmax(peak_E); print(\"Eu:\", '{:.2e} '.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.Eu_i[n_sweep2]); peak_f = np.nanargmin(peak_E); print(\"Eu:\", '{:.2e} '.format(peak_E[peak_f]))\n",
+    "print(f\"[Last  peak - {n_sweep3}]\")\n",
+    "peak_E = np.ravel(data.Eu_i[n_sweep3]); peak_f = np.nanargmax(peak_E); print(\"Eu:\", '{:.2e} '.format(peak_E[peak_f]))\n",
+    "peak_E = np.ravel(data.Eu_i[n_sweep3]); peak_f = np.nanargmin(peak_E); print(\"Eu:\", '{:.2e} '.format(peak_E[peak_f]))\n",
+    "\n"
    ]
   },
   {
@@ -450,6 +470,7 @@
    "outputs": [],
    "source": [
     "n_sweep1 = 0;  n_sweep2 = spec.n_time//2;  n_sweep3 = spec.n_time-1\n",
+    "#n_sweep1 = 4;  n_sweep2 = 6;  n_sweep3 = 9\n",
     "\"\"\"\n",
     "while np.isnan(np.ravel(spec.EuEu[n_sweep1][0])):\n",
     "    n_sweep1 += 1\n",
@@ -566,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep1 = 0;  n_sweep2 = spec.n_time//2;  n_sweep3 = spec.n_time-1\n",
+    "n_sweep1 = 1;  n_sweep2 = spec.n_time//2;  n_sweep3 = spec.n_time-1\n",
     "p_min = p_min1;  p_max = p_max1\n",
     "f_min = f_min1;  f_max = f_max1\n",
     "if f_mode == 0:\n",
@@ -619,6 +640,7 @@
     "n_sweep1 = 0;  n_sweep2 = spec.n_time//2;  n_sweep3 = spec.n_time-1\n",
     "p_min = p_min1;  p_max = p_max1\n",
     "f_min = f_min1;  f_max = f_max1\n",
+    "f_min = 2000;  f_max = 15000\n",
     "\n",
     "fig = plt.figure(figsize=(16, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
     "# ax1.plot(freq_1d, EE_med  ,      '-y',  linewidth=4.0, label='EE_med')\n",
@@ -637,8 +659,8 @@
     "ax1.plot(freq_1d, spec.EwEw[n_sweep3], '-b',  linewidth=0.2, label='ww end')\n",
     "\"\"\"\n",
     "ax1.set_yscale('log');      ax2.set_yscale('log');  ax3.set_yscale('log')\n",
-    "if f_mode == 1:\n",
-    "    ax1.set_xscale('log');  ax2.set_xscale('log');  ax3.set_xscale('log')\n",
+    "#if f_mode == 1:\n",
+    "#    ax1.set_xscale('log');  ax2.set_xscale('log');  ax3.set_xscale('log')\n",
     "ax1.set_ylabel('EuEu '+spec.str_unit);     ax2.set_ylabel('EvEv '+spec.str_unit); ax3.set_ylabel('EwEw '+spec.str_unit);  ax3.set_xlabel('Frequency [kHz]')\n",
     "\n",
     "date1 = spec.epoch[n_sweep1];  date1 = date1.strftime('1st: %Y/%m/%d %R:%S   ')\n",
