--- a/JUICE-CDF-HF-SID21.ipynb
+++ b/JUICE-CDF-HF-SID21.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2025/7/6"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2025/10/14"
    ]
   },
   {
@@ -56,9 +56,9 @@
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
     "import juice_cal_lib    as juice_cal\n",
-    "import juice_cdf_lib    as juice_cdf\n",
+    "# import juice_cdf_lib    as juice_cdf\n",
     "import juice_math_lib   as juice_math\n",
-    "import juice_sid21_data as juice_data\n",
+    "# import juice_sid21_data as juice_data\n",
     "import juice_sid21_lib  as juice_sid21\n",
     "import juice_spec_lib   as juice_spec"
    ]
@@ -82,7 +82,7 @@
     "# *** Dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
@@ -137,7 +137,7 @@
     "# date='20240909'\n",
     "# date='20250331'; ver = 'V02'\n",
     "date='0'; ver = 'V02'\n",
-    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
+    "data_dir, data_name_list = juice_sid21.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -768,21 +768,11 @@
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
     "plt.subplots_adjust(hspace=0.02);  plt.show()\n",
-    "if dump_mode < 1:\n",
+    "if dump_mode > 0:\n",
     "    png_fname = work_dir+data_name+'_FT.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_FT-log.png'\n",
     "    fig2d.savefig(png_fname)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05b24e46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EuEu_2d.shape"
    ]
   },
   {
