--- a/JUICE-CDF-HF-SID23.ipynb
+++ b/JUICE-CDF-HF-SID23.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2025/7/5"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2025/10/14"
    ]
   },
   {
@@ -57,7 +57,7 @@
     "sys.path.append('./lib/')\n",
     "import juice_cal_lib   as juice_cal\n",
     "import juice_cdf_lib   as juice_cdf\n",
-    "import juice_sid23_data as juice_data\n",
+    "# import juice_sid23_data as juice_data\n",
     "import juice_sid23_lib as juice_sid23\n",
     "import juice_spec_lib  as juice_spec"
    ]
@@ -132,7 +132,7 @@
     "# *** Ground test data ***\n",
     "date='0';  ver = 'V02'\n",
     "\n",
-    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
+    "data_dir, data_name_list = juice_sid23.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
