--- a/JUICE-CDF-HF-SID2_sp_cal.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_cal.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a CAL  for ASW1/2/3 -- 2025/7/10"
+    "# JUICE RPWI HF SID2 (RAW): L1a CAL  for ASW1/2/3 -- 2025/10/14"
    ]
   },
   {
@@ -59,7 +59,7 @@
     "sys.path.append('./lib/')\n",
     "import juice_cal_lib   as juice_cal\n",
     "import juice_cdf_lib   as juice_cdf\n",
-    "import juice_sid2_data as juice_data\n",
+    "# import juice_sid2_data as juice_data\n",
     "import juice_sid2_lib  as juice_sid2\n",
     "import juice_spec_lib  as juice_spec"
    ]
@@ -156,7 +156,7 @@
     "# date='20240822';  ver = 'V02'   # CAL\n",
     "# date='20250331';  ver = 'V01'   # CAL\n",
     "date='0';         ver = 'V02'   # Test data\n",
-    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
+    "data_dir, data_name_list = juice_sid2.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -173,8 +173,8 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid2.hf_sid2_read(cdf, RPWI_FSW_version)\n",
+    "    # RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid2.hf_sid2_read(cdf) #, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1;                                print(data.Eu_i.shape)\n",
     "    else:\n",
