--- a/JUICE-CDF-HF-SID4-20.ipynb
+++ b/JUICE-CDF-HF-SID4-20.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2025/7/7"
+    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2025/10/14"
    ]
   },
   {
@@ -58,7 +58,7 @@
     "import juice_cal_lib    as juice_cal\n",
     "import juice_cdf_lib    as juice_cdf\n",
     "import juice_math_lib   as juice_math\n",
-    "import juice_sid20_data as juice_data\n",
+    "# import juice_sid20_data as juice_data\n",
     "import juice_sid20_lib  as juice_sid20\n",
     "import juice_spec_lib   as juice_spec"
    ]
@@ -82,7 +82,7 @@
     "# *** Dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
@@ -140,7 +140,7 @@
     "# date='20240819';  ver = 'V02'\n",
     "date='0';  ver = 'V02'\n",
     "sid = 20\n",
-    "data_dir, data_name_list = juice_data.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
+    "data_dir, data_name_list = juice_sid20.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = juice_sid20.hf_sid20_shaping(data, sid, cal_mode, comp_mode)"
+    "data = juice_sid20.hf_sid20_shaping(data, cal_mode, comp_mode)"
    ]
   },
   {
@@ -186,7 +186,7 @@
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "str_date = date1 + \"  -  \" + date2\n",
-    "n_time0 = data.EuEu.shape[0];    n_freq0 = data.EuEu.shape[1]\n",
+    "n_time0 = data.n_time;           n_freq0 = data.n_freq\n",
     "f_min0  = data.frequency[0][0];  f_max0  = (max(np.ravel(data.frequency)))\n",
     "\n",
     "print(\"       date and time:\", str_date)\n",
@@ -534,13 +534,13 @@
     "\n",
     "# Time resoution: 1/n_block [sec]\n",
     "Epoch_1d = data.epoch.tolist();   Epoch_2d = []\n",
-    "for i in range(data.N_block[0]):\n",
+    "for i in range(data.n_block):\n",
     "    Epoch_2d += Epoch_1d\n",
     "for i in range(n_time0):\n",
-    "    for j in range(data.N_block[0]):\n",
-    "        Epoch_2d[i*data.N_block[0] + j] = Epoch_1d[i] + timedelta(seconds = j/data.N_block[0])\n",
+    "    for j in range(data.n_block):\n",
+    "        Epoch_2d[i*data.n_block + j] = Epoch_1d[i] + timedelta(seconds = j/data.n_block)\n",
     "freq_1d       = data.frequency[0].tolist()\n",
-    "freq1         = freq_1d[0:data.n_step]\n"
+    "freq1         = freq_1d[0:data.n_step]"
    ]
   },
   {
@@ -551,28 +551,28 @@
    "outputs": [],
    "source": [
     "spec.EE    = spec.EuEu + spec.EvEv + spec.EwEw\n",
-    "EuEu_2d    = spec.EuEu.reshape   (n_time0 * data.N_block[0], data.n_step);     EuEu_2d =    EuEu_2d.transpose();  EuEu_med    = np.nanmedian(spec.EuEu,    axis=0)\n",
-    "EvEv_2d    = spec.EvEv.reshape   (n_time0 * data.N_block[0], data.n_step);     EvEv_2d =    EvEv_2d.transpose();  EvEv_med    = np.nanmedian(spec.EvEv,    axis=0)\n",
-    "EwEw_2d    = spec.EwEw.reshape   (n_time0 * data.N_block[0], data.n_step);     EwEw_2d =    EwEw_2d.transpose();  EwEw_med    = np.nanmedian(spec.EwEw,    axis=0)\n",
-    "EE_2d      = spec.EE.reshape     (n_time0 * data.N_block[0], data.n_step);     EE_2d   =    EE_2d.transpose();    EE_med      = np.nanmedian(spec.EuEu,    axis=0)\n",
-    "E_DoPuv_2d = spec.E_DoLuv.reshape(n_time0 * data.N_block[0], data.n_step);  E_DoPuv_2d = E_DoPuv_2d.transpose();  E_DoPuv_med = np.nanmedian(spec.E_DoPuv, axis=0)\n",
-    "E_DoPvw_2d = spec.E_DoLvw.reshape(n_time0 * data.N_block[0], data.n_step);  E_DoPvw_2d = E_DoPvw_2d.transpose();  E_DoPvw_med = np.nanmedian(spec.E_DoPvw, axis=0)\n",
-    "E_DoPwu_2d = spec.E_DoLwu.reshape(n_time0 * data.N_block[0], data.n_step);  E_DoPwu_2d = E_DoPwu_2d.transpose();  E_DoPwu_med = np.nanmedian(spec.E_DoPwu, axis=0)\n",
-    "E_DoLuv_2d = spec.E_DoLuv.reshape(n_time0 * data.N_block[0], data.n_step);  E_DoLuv_2d = E_DoLuv_2d.transpose();  E_DoLuv_med = np.nanmedian(spec.E_DoLuv, axis=0)\n",
-    "E_DoLvw_2d = spec.E_DoLvw.reshape(n_time0 * data.N_block[0], data.n_step);  E_DoLvw_2d = E_DoLvw_2d.transpose();  E_DoLvw_med = np.nanmedian(spec.E_DoLvw, axis=0)\n",
-    "E_DoLwu_2d = spec.E_DoLwu.reshape(n_time0 * data.N_block[0], data.n_step);  E_DoLwu_2d = E_DoLwu_2d.transpose();  E_DoLwu_med = np.nanmedian(spec.E_DoLwu, axis=0)\n",
-    "E_DoCuv_2d = spec.E_DoCuv.reshape(n_time0 * data.N_block[0], data.n_step);  E_DoCuv_2d = E_DoCuv_2d.transpose();  E_DoCuv_med = np.nanmedian(spec.E_DoCuv, axis=0)\n",
-    "E_DoCvw_2d = spec.E_DoCvw.reshape(n_time0 * data.N_block[0], data.n_step);  E_DoCvw_2d = E_DoCvw_2d.transpose();  E_DoCvw_med = np.nanmedian(spec.E_DoCvw, axis=0)\n",
-    "E_DoCwu_2d = spec.E_DoCwu.reshape(n_time0 * data.N_block[0], data.n_step);  E_DoCwu_2d = E_DoCwu_2d.transpose();  E_DoCwu_med = np.nanmedian(spec.E_DoCwu, axis=0)\n",
-    "E_ANGuv_2d = spec.E_ANGuv.reshape(n_time0 * data.N_block[0], data.n_step);  E_ANGuv_2d = E_ANGuv_2d.transpose();  E_ANGuv_med = np.nanmedian(spec.E_ANGuv, axis=0)\n",
-    "E_ANGvw_2d = spec.E_ANGvw.reshape(n_time0 * data.N_block[0], data.n_step);  E_ANGvw_2d = E_ANGvw_2d.transpose();  E_ANGvw_med = np.nanmedian(spec.E_ANGvw, axis=0)\n",
-    "E_ANGwu_2d = spec.E_ANGwu.reshape(n_time0 * data.N_block[0], data.n_step);  E_ANGwu_2d = E_ANGwu_2d.transpose();  E_ANGwu_med = np.nanmedian(spec.E_ANGwu, axis=0)\n",
-    "E_COHuv_2d = spec.E_ANGwu.reshape(n_time0 * data.N_block[0], data.n_step);  E_COHuv_2d = E_COHuv_2d.transpose();  E_COHuv_med = np.nanmedian(spec.E_COHuv, axis=0)\n",
-    "E_COHvw_2d = spec.E_ANGwu.reshape(n_time0 * data.N_block[0], data.n_step);  E_COHvw_2d = E_COHvw_2d.transpose();  E_COHvw_med = np.nanmedian(spec.E_COHvw, axis=0)\n",
-    "E_COHwu_2d = spec.E_ANGwu.reshape(n_time0 * data.N_block[0], data.n_step);  E_COHwu_2d = E_COHwu_2d.transpose();  E_COHwu_med = np.nanmedian(spec.E_COHwu, axis=0)\n",
-    "E_PHAuv_2d = spec.E_ANGwu.reshape(n_time0 * data.N_block[0], data.n_step);  E_PHAuv_2d = E_PHAuv_2d.transpose();  E_PHAuv_med = np.nanmedian(spec.E_PHAuv, axis=0)\n",
-    "E_PHAvw_2d = spec.E_ANGwu.reshape(n_time0 * data.N_block[0], data.n_step);  E_PHAvw_2d = E_PHAvw_2d.transpose();  E_PHAvw_med = np.nanmedian(spec.E_PHAvw, axis=0)\n",
-    "E_PHAwu_2d = spec.E_ANGwu.reshape(n_time0 * data.N_block[0], data.n_step);  E_PHAwu_2d = E_PHAwu_2d.transpose();  E_PHAwu_med = np.nanmedian(spec.E_PHAwu, axis=0)\n",
+    "EuEu_2d    = spec.EuEu.reshape   (n_time0 * data.n_block, data.n_step);     EuEu_2d =    EuEu_2d.transpose();  EuEu_med    = np.nanmedian(spec.EuEu,    axis=0)\n",
+    "EvEv_2d    = spec.EvEv.reshape   (n_time0 * data.n_block, data.n_step);     EvEv_2d =    EvEv_2d.transpose();  EvEv_med    = np.nanmedian(spec.EvEv,    axis=0)\n",
+    "EwEw_2d    = spec.EwEw.reshape   (n_time0 * data.n_block, data.n_step);     EwEw_2d =    EwEw_2d.transpose();  EwEw_med    = np.nanmedian(spec.EwEw,    axis=0)\n",
+    "EE_2d      = spec.EE.reshape     (n_time0 * data.n_block, data.n_step);     EE_2d   =    EE_2d.transpose();    EE_med      = np.nanmedian(spec.EuEu,    axis=0)\n",
+    "E_DoPuv_2d = spec.E_DoLuv.reshape(n_time0 * data.n_block, data.n_step);  E_DoPuv_2d = E_DoPuv_2d.transpose();  E_DoPuv_med = np.nanmedian(spec.E_DoPuv, axis=0)\n",
+    "E_DoPvw_2d = spec.E_DoLvw.reshape(n_time0 * data.n_block, data.n_step);  E_DoPvw_2d = E_DoPvw_2d.transpose();  E_DoPvw_med = np.nanmedian(spec.E_DoPvw, axis=0)\n",
+    "E_DoPwu_2d = spec.E_DoLwu.reshape(n_time0 * data.n_block, data.n_step);  E_DoPwu_2d = E_DoPwu_2d.transpose();  E_DoPwu_med = np.nanmedian(spec.E_DoPwu, axis=0)\n",
+    "E_DoLuv_2d = spec.E_DoLuv.reshape(n_time0 * data.n_block, data.n_step);  E_DoLuv_2d = E_DoLuv_2d.transpose();  E_DoLuv_med = np.nanmedian(spec.E_DoLuv, axis=0)\n",
+    "E_DoLvw_2d = spec.E_DoLvw.reshape(n_time0 * data.n_block, data.n_step);  E_DoLvw_2d = E_DoLvw_2d.transpose();  E_DoLvw_med = np.nanmedian(spec.E_DoLvw, axis=0)\n",
+    "E_DoLwu_2d = spec.E_DoLwu.reshape(n_time0 * data.n_block, data.n_step);  E_DoLwu_2d = E_DoLwu_2d.transpose();  E_DoLwu_med = np.nanmedian(spec.E_DoLwu, axis=0)\n",
+    "E_DoCuv_2d = spec.E_DoCuv.reshape(n_time0 * data.n_block, data.n_step);  E_DoCuv_2d = E_DoCuv_2d.transpose();  E_DoCuv_med = np.nanmedian(spec.E_DoCuv, axis=0)\n",
+    "E_DoCvw_2d = spec.E_DoCvw.reshape(n_time0 * data.n_block, data.n_step);  E_DoCvw_2d = E_DoCvw_2d.transpose();  E_DoCvw_med = np.nanmedian(spec.E_DoCvw, axis=0)\n",
+    "E_DoCwu_2d = spec.E_DoCwu.reshape(n_time0 * data.n_block, data.n_step);  E_DoCwu_2d = E_DoCwu_2d.transpose();  E_DoCwu_med = np.nanmedian(spec.E_DoCwu, axis=0)\n",
+    "E_ANGuv_2d = spec.E_ANGuv.reshape(n_time0 * data.n_block, data.n_step);  E_ANGuv_2d = E_ANGuv_2d.transpose();  E_ANGuv_med = np.nanmedian(spec.E_ANGuv, axis=0)\n",
+    "E_ANGvw_2d = spec.E_ANGvw.reshape(n_time0 * data.n_block, data.n_step);  E_ANGvw_2d = E_ANGvw_2d.transpose();  E_ANGvw_med = np.nanmedian(spec.E_ANGvw, axis=0)\n",
+    "E_ANGwu_2d = spec.E_ANGwu.reshape(n_time0 * data.n_block, data.n_step);  E_ANGwu_2d = E_ANGwu_2d.transpose();  E_ANGwu_med = np.nanmedian(spec.E_ANGwu, axis=0)\n",
+    "E_COHuv_2d = spec.E_ANGwu.reshape(n_time0 * data.n_block, data.n_step);  E_COHuv_2d = E_COHuv_2d.transpose();  E_COHuv_med = np.nanmedian(spec.E_COHuv, axis=0)\n",
+    "E_COHvw_2d = spec.E_ANGwu.reshape(n_time0 * data.n_block, data.n_step);  E_COHvw_2d = E_COHvw_2d.transpose();  E_COHvw_med = np.nanmedian(spec.E_COHvw, axis=0)\n",
+    "E_COHwu_2d = spec.E_ANGwu.reshape(n_time0 * data.n_block, data.n_step);  E_COHwu_2d = E_COHwu_2d.transpose();  E_COHwu_med = np.nanmedian(spec.E_COHwu, axis=0)\n",
+    "E_PHAuv_2d = spec.E_ANGwu.reshape(n_time0 * data.n_block, data.n_step);  E_PHAuv_2d = E_PHAuv_2d.transpose();  E_PHAuv_med = np.nanmedian(spec.E_PHAuv, axis=0)\n",
+    "E_PHAvw_2d = spec.E_ANGwu.reshape(n_time0 * data.n_block, data.n_step);  E_PHAvw_2d = E_PHAvw_2d.transpose();  E_PHAvw_med = np.nanmedian(spec.E_PHAvw, axis=0)\n",
+    "E_PHAwu_2d = spec.E_ANGwu.reshape(n_time0 * data.n_block, data.n_step);  E_PHAwu_2d = E_PHAwu_2d.transpose();  E_PHAwu_med = np.nanmedian(spec.E_PHAwu, axis=0)\n",
     "\n",
     "f_min0 = freq_1d[0];  f_max0 = freq_1d[data.n_step-1]\n",
     "print(spec.str_unit, \"   f_min/MAX:\", f_min0, f_max0, \"   num of f, step, window:\", data.n_step, data.freq_step[0][0], data.freq_width[0][0])"
@@ -960,10 +960,10 @@
     "EwEw_c = juice_math.clean_rfi(np.ravel(spec.EwEw), 5, 2);  EE_c   = juice_math.clean_rfi(np.ravel(spec.EE),   5, 2)\n",
     "EuEu_c = EuEu_c.reshape(n_time0, n_freq0);                 EvEv_c = EvEv_c.reshape(n_time0, n_freq0)\n",
     "EwEw_c = EwEw_c.reshape(n_time0, n_freq0);                 EE_c   = EE_c.reshape  (n_time0, n_freq0)\n",
-    "EuEu_c_2d = EuEu_c.reshape(n_time0 * data.N_block[0], data.n_step);     EuEu_c_2d = EuEu_c_2d.transpose()\n",
-    "EvEv_c_2d = EvEv_c.reshape(n_time0 * data.N_block[0], data.n_step);     EvEv_c_2d = EvEv_c_2d.transpose()\n",
-    "EwEw_c_2d = EwEw_c.reshape(n_time0 * data.N_block[0], data.n_step);     EwEw_c_2d = EwEw_c_2d.transpose()\n",
-    "EE_c_2d   = EE_c.reshape  (n_time0 * data.N_block[0], data.n_step);     EE_c_2d   = EE_c_2d.transpose()"
+    "EuEu_c_2d = EuEu_c.reshape(n_time0 * data.n_block, data.n_step);     EuEu_c_2d = EuEu_c_2d.transpose()\n",
+    "EvEv_c_2d = EvEv_c.reshape(n_time0 * data.n_block, data.n_step);     EvEv_c_2d = EvEv_c_2d.transpose()\n",
+    "EwEw_c_2d = EwEw_c.reshape(n_time0 * data.n_block, data.n_step);     EwEw_c_2d = EwEw_c_2d.transpose()\n",
+    "EE_c_2d   = EE_c.reshape  (n_time0 * data.n_block, data.n_step);     EE_c_2d   = EE_c_2d.transpose()"
    ]
   },
   {
