--- a/JUICE-CDF-HF-SID5.ipynb
+++ b/JUICE-CDF-HF-SID5.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2025/7/5"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2025/10/14"
    ]
   },
   {
@@ -58,7 +58,7 @@
     "import juice_cal_lib   as juice_cal\n",
     "import juice_cdf_lib   as juice_cdf\n",
     "import juice_math_lib  as juice_math\n",
-    "import juice_sid5_data as juice_data\n",
+    "# import juice_sid5_data as juice_data\n",
     "import juice_sid5_lib  as juice_sid5\n",
     "import juice_spec_lib  as juice_spec"
    ]
@@ -125,7 +125,7 @@
     "# date='20240909'\n",
     "# date='20250331'; ver = 'V02'\n",
     "date='0'; ver = 'V02'\n",
-    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
+    "data_dir, data_name_list = juice_sid5.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
