--- a/JUICE-CDF-HF-SID6-22.ipynb
+++ b/JUICE-CDF-HF-SID6-22.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 & 22 (PSSR2): L1a QL -- 2025/7/5"
+    "# JUICE RPWI HF SID6 & 22 (PSSR2): L1a QL -- 2025/10/14"
    ]
   },
   {
@@ -53,8 +53,8 @@
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
-    "import juice_cdf_lib as juice_cdf\n",
-    "import juice_sid22_data as juice_data\n",
+    "# import juice_cdf_lib as juice_cdf\n",
+    "# import juice_sid22_data as juice_data\n",
     "import juice_sid22_lib as juice_sid22"
    ]
   },
@@ -102,8 +102,8 @@
     "# *** Ground test data ***\n",
     "date='0';  ver = 'V02'\n",
     "\n",
-    "sid = 22                    # 6 or 22\n",
-    "data_dir, data_name_list = juice_data.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
+    "sid = 6                    # 6 or 22\n",
+    "data_dir, data_name_list = juice_sid22.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -125,7 +125,7 @@
     "    if i==0:\n",
     "        data = data1;                                       print(\"sid\", sid, data.auto_corr.shape)\n",
     "    else:\n",
-    "        data = juice_sid22.hf_sid22_add(data, data1, sid);  print(\"sid\", sid, data.auto_corr.shape)\n",
+    "        data = juice_sid22.hf_sid22_add(data, data1);  print(\"sid\", sid, data.auto_corr.shape)\n",
     "data_name = os.path.split(data_name)[1];                    print(\"data name:\", data_name)"
    ]
   },
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = juice_sid22.hf_sid22_shaping(data, sid)\n",
+    "data = juice_sid22.hf_sid22_shaping(data)\n",
     "\n",
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
