--- a/JUICE-CDF-HF-SID7.ipynb
+++ b/JUICE-CDF-HF-SID7.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2025/7/5"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2025/10/14"
    ]
   },
   {
@@ -54,7 +54,7 @@
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
     "import juice_cdf_lib as juice_cdf\n",
-    "import juice_sid7_data as juice_data\n",
+    "# import juice_sid7_data as juice_data\n",
     "import juice_sid7_lib as juice_sid7"
    ]
   },
@@ -126,7 +126,7 @@
     "# *** Ground test data ***\n",
     "date='0';  ver = 'V02'\n",
     "\n",
-    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
+    "data_dir, data_name_list = juice_sid7.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
