--- a/JUICE-CDF-HF-SID3.ipynb
+++ b/JUICE-CDF-HF-SID3.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/10/3"
+    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/10/14"
    ]
   },
   {
@@ -55,7 +55,7 @@
     "import juice_cal_lib   as juice_cal\n",
     "import juice_cdf_lib   as juice_cdf\n",
     "import juice_math_lib  as juice_math\n",
-    "import juice_sid3_data as juice_data\n",
+    "#import juice_sid3_data as juice_data\n",
     "import juice_sid3_lib  as juice_sid3\n",
     "import juice_spec_lib  as juice_spec"
    ]
@@ -145,7 +145,7 @@
     "# date='20240909';  ver = 'V02'\n",
     "# date='20250331';  ver = 'V02'\n",
     "date='0';         ver = 'V02'   # Test data\n",
-    "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
+    "data_dir, data_name_list = juice_sid3.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
   {
@@ -2798,7 +2798,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.11",
+   "display_name": "3.12s",
    "language": "python",
    "name": "python3"
   },
@@ -2812,7 +2812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
