HF-ID: SID, ISW, config

--- a/JUICE-CDF-HF-SID23.ipynb
+++ b/JUICE-CDF-HF-SID23.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2025/10/14"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2025/10/23"
    ]
   },
   {
@@ -149,7 +149,6 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    # RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
     "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid23.hf_sid23_read(cdf) #, RPWI_FSW_version)\n",
     "    if i==0:\n",
     "        data = data1;                                  print(data.Eu_i.shape)\n",
@@ -663,9 +662,9 @@
     "print(\"Peak   Eu:\", '{:.2e}'.format(np.nanmax(wave.Eu_i)), ' {:.2e}'.format(np.nanmax(wave.Eu_q)), wave.str_unit)\n",
     "print(\"Peak   Ev:\", '{:.2e}'.format(np.nanmax(wave.Ev_i)), ' {:.2e}'.format(np.nanmax(wave.Ev_q)), wave.str_unit)\n",
     "print(\"Peak   Ew:\", '{:.2e}'.format(np.nanmax(wave.Ew_i)), ' {:.2e}'.format(np.nanmax(wave.Ew_q)), wave.str_unit)\n",
-    "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str_unit, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str_unit, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str_unit)\n",
-    "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str_unit, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str_unit, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str_unit)\n",
-    "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str_unit, '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str_unit, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5), wave.str_unit)"
+    "peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str_unit, '  |  {:.2e}'.format( np.sum(peak_E[peak_f-3:peak_f+4])), spec.str_unit, ' {:.2e}'.format( np.sum(peak_E[peak_f-3:peak_f+4])**.5), wave.str_unit)\n",
+    "peak_E = np.ravel(spec.EvEv[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EvEv:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str_unit, '  |  {:.2e}'.format( np.sum(peak_E[peak_f-3:peak_f+4])), spec.str_unit, ' {:.2e}'.format( np.sum(peak_E[peak_f-3:peak_f+4])**.5), wave.str_unit)\n",
+    "peak_E = np.ravel(spec.EwEw[:][:]); peak_f = np.nanargmax(peak_E); print(\"Peak EwEw:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), wave.str_unit, '  |  {:.2e}'.format( np.sum(peak_E[peak_f-3:peak_f+4])), spec.str_unit, ' {:.2e}'.format( np.sum(peak_E[peak_f-3:peak_f+4])**.5), wave.str_unit)"
    ]
   },
   {
