--- a/JUICE-CDF-HF-SID7.ipynb
+++ b/JUICE-CDF-HF-SID7.ipynb
@@ -521,6 +521,16 @@
     "    png_fname = work_dir+data_name+'_overall.png'\n",
     "    fig2d.savefig(png_fname)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bb06a97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(data.E_i), np.max(data.E_q)"
+   ]
   }
  ],
  "metadata": {
