--- a/JUICE-CDF-HF-emu.ipynb
+++ b/JUICE-CDF-HF-emu.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF Emulation and Comparison: L1a all SIDs & ASWs -- 2025/10/20"
+    "# JUICE RPWI HF Emulation and Comparison: L1a all SIDs & ASWs -- 2025/10/21"
    ]
   },
   {
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "if mode_sid20>0:\n",
-    "    cdf = pycdf.CDF(cdf_sid20);  data_sid20 = juice_sid20.hf_sid20_read(cdf, 20);  data_sid20 = juice_sid20.hf_sid20_shaping(data_sid20, cal_mode, 1)\n",
+    "    cdf = pycdf.CDF(cdf_sid20);  data_sid20 = juice_sid20.hf_sid20_read(cdf);  data_sid20 = juice_sid20.hf_sid20_shaping(data_sid20, cal_mode, 1)\n",
     "    ##########\n",
     "    n_sweep1 = 12;  n_sweep2 = data_sid20.n_time-1;                # ASW3 COMP-1 20250925    0.02-2MHz 5s\t\tVin=10 mVpp\n",
     "    ##########\n",
@@ -304,7 +304,7 @@
    "outputs": [],
    "source": [
     "if mode_sid4>0:\n",
-    "    cdf = pycdf.CDF(cdf_sid4);  data_sid4 = juice_sid20.hf_sid20_read(cdf, 4);  data_sid4 = juice_sid20.hf_sid20_shaping(data_sid4, cal_mode, 1)\n",
+    "    cdf = pycdf.CDF(cdf_sid4);  data_sid4 = juice_sid20.hf_sid20_read(cdf);  data_sid4 = juice_sid20.hf_sid20_shaping(data_sid4, cal_mode, 1)\n",
     "    ##########\n",
     "    n_sweep1 = 1;  n_sweep2 = data_sid4.n_time;                # ASW3 COMP-1 20250925    0.02-2MHz 5s\t\tVin=10 mVpp\n",
     "    ##########\n",
