--- a/JUICE-CDF-HF-SID4-20.ipynb
+++ b/JUICE-CDF-HF-SID4-20.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2025/10/14"
+    "# JUICE RPWI HF SID4 & 20 (Burst): L1a QL -- 2025/10/21"
    ]
   },
   {
@@ -157,8 +157,7 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    # RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid20.hf_sid20_read(cdf, sid) #, RPWI_FSW_version)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid20.hf_sid20_read(cdf)\n",
     "    if i==0:\n",
     "        data = data1;                                       print(\"sid\", sid, data.EuEu.shape)\n",
     "    else:\n",
