--- a/JUICE-CDF-HF-SID6-22.ipynb
+++ b/JUICE-CDF-HF-SID6-22.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 & 22 (PSSR2): L1a QL -- 2025/10/14"
+    "# JUICE RPWI HF SID6 & 22 (PSSR2): L1a QL -- 2025/10/21"
    ]
   },
   {
@@ -102,7 +102,7 @@
     "# *** Ground test data ***\n",
     "date='0';  ver = 'V02'\n",
     "\n",
-    "sid = 6                    # 6 or 22\n",
+    "sid = 22                    # 6 or 22\n",
     "data_dir, data_name_list = juice_sid22.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -120,8 +120,7 @@
     "num_list = len(data_name_list)\n",
     "for i in range(num_list):\n",
     "    data_name = data_name_list[i];  cdf_file = data_dir + data_name;  print(i, cdf_file)\n",
-    "    # RPWI_FSW_version = juice_cdf._RPWI_FSW_version(cdf_file)\n",
-    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid22.hf_sid22_read(cdf, sid) #, RPWI_FSW_version)\n",
+    "    cdf = pycdf.CDF(cdf_file);      data1 = juice_sid22.hf_sid22_read(cdf)\n",
     "    if i==0:\n",
     "        data = data1;                                       print(\"sid\", sid, data.auto_corr.shape)\n",
     "    else:\n",
@@ -489,6 +488,16 @@
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_overall.png'\n",
     "    fig2d.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f9bc6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(data.E_i), np.max(data.E_q)"
    ]
   }
  ],
